<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/carnival"
        android:textColor="@color/primaryTextColor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="160dp"
        android:layout_height="182dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="11dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/halo4" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="70dp"
        android:layout_height="68dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="9dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/halo3" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="98dp"
        android:layout_height="68dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/halo2" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="196dp"
        android:layout_height="104dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:srcCompat="@drawable/skulls" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="9dp"
        android:text="@string/describe"
        android:textColor="@color/primaryTextColor"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/describe1"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/primaryLightColor"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="100dp"
            android:layout_height="120dp"
            app:srcCompat="@drawable/pirate" />

        <TextView
            android:id="@+id/textView13"
            android:layout_marginLeft="120dp"
            android:textColor="@color/primaryTextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/come" />

        <TextView
            android:id="@+id/textView14"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="120dp"
            android:textColor="@color/primaryTextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/g5" />

        <TextView
            android:id="@+id/textView15"
            android:textColor="@color/primaryTextColor"
            android:textSize="10sp"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="120dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/why" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="13dp"
        android:text="@string/urcontact"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="148dp"
        android:layout_height="135dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="81dp"
        android:layout_marginBottom="70dp"
        android:backgroundTint="@color/primaryLightColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="wrap_content"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/good" />

        <TextView
            android:id="@+id/textView6"
            android:textColor="@color/primaryTextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timothy" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryTextColor"
            android:layout_marginTop="20dp"
            android:text="@string/status" />

        <TextView
            android:id="@+id/textView9"
            android:textColor="@color/primaryTextColor"
            android:layout_marginTop="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/going" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_marginTop="80dp"
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/rectangle" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_marginTop="90dp"
            android:layout_marginLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/phone" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_marginTop="80dp"
            android:layout_marginLeft="45dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/rectangle" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_marginTop="90dp"
            android:layout_marginLeft="55dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/email" />

        <ImageView
            android:id="@+id/imageView14"
            android:layout_marginTop="80dp"
            android:layout_marginLeft="85dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/rectangle" />

        <ImageView
            android:id="@+id/imageView15"
            android:layout_marginTop="90dp"
            android:layout_marginLeft="100dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/fb" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="60dp"
        android:layout_height="135dp"
        android:layout_marginTop="79dp"
        android:layout_marginEnd="176dp"
        android:layout_marginBottom="70dp"
        android:backgroundTint="@color/primaryLightColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.069" >

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            android:rotation="-90"
            android:text="@string/name1"
            android:textColor="@color/primaryTextColor" />

        <ImageView
            android:id="@+id/imageView19"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/x" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="60dp"
        android:layout_height="135dp"
        android:layout_marginTop="79dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="70dp"
        android:backgroundTint="@color/primaryLightColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.069" >

        <TextView
            android:id="@+id/textView11"
            android:rotation="-90"
            android:layout_marginTop="30dp"
            android:textColor="@color/primaryTextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seth" />

        <ImageView
            android:id="@+id/imageView20"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/good" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView5"
        android:layout_width="60dp"
        android:layout_height="135dp"
        android:layout_marginTop="79dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="70dp"
        android:backgroundTint="@color/primaryLightColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.069" >

        <TextView
            android:id="@+id/textView12"
            android:rotation="-90"
            android:textColor="@color/primaryTextColor"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lillian" />

        <ImageView
            android:id="@+id/imageView21"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/x" />
    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/divider"
        android:layout_width="150dp"
        android:layout_height="2dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/contact"
        tools:layout_editor_absoluteX="8dp" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="115dp"
        android:layout_marginTop="47dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/third" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.013"
        app:srcCompat="@drawable/second" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:srcCompat="@drawable/first" />

</androidx.constraintlayout.widget.ConstraintLayout>